apps/base/mealie/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mealie
spec: {}
status: {}
