apps/base/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mealie
  name: mealie 
  namespace: mealie  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - image: ghcr.io/mealie-recipes/mealie:v3.25.1
          name: mealie
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "50m"
              memory: "600Mi"
            limits:
              cpu: "500m"
              memory: "1200Mi"
          volumeMounts:
          - mountPath: /app/data
            name: mealie-data  
      restartPolicy: Always
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
